<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateMovie">

    <TextView
        android:id="@+id/tvid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/gothic_a1_extrabold"
        android:text="@string/movie_id"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text=""
        android:textColor="#000000"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gothic_a1_extrabold"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_movie_title_here"
        android:inputType="text"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:text=""
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genree"
        android:textColor="#000000"
        android:textSize="20sp"
        android:fontFamily="@font/gothic_a1_extrabold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_movie_genre_here"
        android:inputType="text"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yearr"
        android:textColor="#000000"
        android:textSize="20sp"
        android:fontFamily="@font/gothic_a1_extrabold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_year_of_movie_release_here"
        android:inputType="text"
        android:textColorHint="#000000"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:fontFamily="@font/gothic_a1_extrabold"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"/>

    <Spinner
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinnerItems"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/gothic_a1_extrabold"
            android:background="#F40A0A"
            android:textColor="#FFFFFF"
            android:text="@string/update"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/gothic_a1_extrabold"
            android:background="#F40A0A"
            android:textColor="#FFFFFF"
            android:text="@string/delete" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" >
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/gothic_a1_extrabold"
            android:background="#F40A0A"
            android:textColor="#FFFFFF"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>